--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,3 +19,5 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 URL: https://github.com/nim-ach/cyclismProj
 BugReports: https://github.com/nim-ach/cyclismProj/issues
+Imports: 
+    data.table
